# crx_kinematics-release

./: .clang-format  CHANGELOG.rst  CMakeLists.txt  DERIVATION.md  LICENSE  README.md  crx_kinematics_plugin_description.xml  debian.store  package.xml  patches.conf  pyproject.toml  releaser_history.json  rolling.ignored  rpm.store  tracks.yaml
.github/workflows/: humble.yml  jazzy.yml  kilted.yml  rolling.yml  ros-ci.yml
crx_kinematics/include/crx_kinematics/: crx_kinematics_plugin.hpp
crx_kinematics/src/: robot.cpp
crx_kinematics/test/: crx10ia_l_paolofrance.urdf  crx30ia.urdf
crx_kinematics_py/: CHANGELOG.rst  package.xml  setup.py
crx_kinematics_py/crx_kinematics_py/utils/: geometry.py
debian/: changelog  control  copyright  gbp.conf  rules
include/crx_kinematics/: robot.hpp
rpm/: ros-humble-crx-kinematics.spec  ros-kilted-crx-kinematics.spec  ros-rolling-crx-kinematics.spec  template.spec
src/: crx_kinematics_plugin.cpp
test/: crx10ia.srdf  crx10ia.urdf  crx10ia_l_paolofrance.srdf  crx30ia.srdf  test_crx_kinematics_plugin.cpp  test_fk_ik.cpp
