<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crx_kinematics_py</name>
  <version>1.0.0</version>
  <description>Python implementation of FK/IK for Fanuc CRX series cobots</description>
  <maintainer email="cranston.daniel@gmail.com">Daniel Cranston</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
